--- a/src/app/featured/dashbord/component/popups/add-location-popup/add-location-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-location-popup/add-location-popup.component.html
@@ -201,7 +201,7 @@
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" formControlName="startdate">
+                                        <input type="date" class="form-control" formControlName="startdate">
                                         <!-- <select class="form-control" formControlName="startdate">
                                             <option>1</option>
                                             <option>2</option>
