--- a/src/app/featured/dashbord/component/popups/add-user-popup/add-user.component.html
+++ b/src/app/featured/dashbord/component/popups/add-user-popup/add-user.component.html
@@ -76,7 +76,7 @@
                         <div class="switch-wrap">
                             <label type="text" class="label">Status</label>
                             <label class="switch">
-                                <input type="checkbox" id="togBtn">
+                                <input type="checkbox" [value]="true" formControlName="status">
                                 <div class="slider round">
                                     <span class="on">Active</span>
                                     <span class="off">Inactive</span>
