--- a/src/app/featured/dashbord/component/chain/chain.component.html
+++ b/src/app/featured/dashbord/component/chain/chain.component.html
@@ -9,10 +9,10 @@
     </div>
   </section>
   <section class="table-wrap">
-    <table class="table table-striped" *ngIf="addedChains&&addedChains.length>0">
+    <table class="table table-main-head">
       <thead>
         <tr>
-          <th (click)="sort('id')">
+          <th style="width: 20%;" (click)="sort('id')">
             <span class="sort-wrap">
               Id
               <span class="sort-icons">
@@ -21,7 +21,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('ChainId')">
+          <th style="width: 20%;" (click)="sort('ChainId')">
             <span class="sort-wrap">
               Chain Code
               <span class="sort-icons">
@@ -29,7 +29,7 @@
                 <i class="sort-down"></i>
               </span>
             </span></th>
-          <th (click)="sort('ChainName')">
+          <th style="width: 30%;" (click)="sort('ChainName')">
             <span class="sort-wrap">
               Chain Name
               <span class="sort-icons">
@@ -37,22 +37,26 @@
                 <i class="sort-down"></i>
               </span>
             </span></th>
-          <th style="width: 20%;">Operation</th>
+          <th style="width: 30%;">Operation</th>
         </tr>
       </thead>
-      <tbody>
-        <tr *ngFor="let item of addedChains | orderBy: {property: column, direction: direction}|filter:searchText">
-          <td>{{item.id}}</td>
-          <td>{{item.ChainId}}</td>
-          <td>{{item.ChainName}}</td>
-          <td class="btn-wrap" style="width: 20%;">
-            <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
-            <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
-          </td>
-        </tr>
-      </tbody>
     </table>
-    <app-no-data *ngIf="!addedChains||addedChains.length==0"></app-no-data>
+    <div class="table-scroll-wrap">
+      <table class="table table-striped table-main-body" *ngIf="addedChains&&addedChains.length>0">
+        <tbody>
+          <tr *ngFor="let item of addedChains | orderBy: {property: column, direction: direction}|filter:searchText">
+            <td style="width: 20%;">{{item.id}}</td>
+            <td style="width: 20%;">{{item.ChainId}}</td>
+            <td style="width: 30%;">{{item.ChainName}}</td>
+            <td style=" width: 30%;" class="btn-wrap">
+              <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
+              <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <app-no-data *ngIf="!addedChains||addedChains.length==0"></app-no-data>
+    </div>
   </section>
 </section>
 
