--- a/src/app/featured/dashbord/component/company-access/company-access.component.html
+++ b/src/app/featured/dashbord/component/company-access/company-access.component.html
@@ -11,10 +11,10 @@
     </div>
   </section>
   <section class="table-wrap">
-    <table class="table table-striped" *ngIf="companyAccess&&companyAccess.length>0">
+    <table class="table table-main-head">
       <thead>
         <tr>
-          <th (click)="sort('UserID')">
+          <th (click)="sort('UserID')" style="width: 20%;">
             <span class="sort-wrap">
               Id
               <span class="sort-icons">
@@ -23,7 +23,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('user_name')">
+          <th (click)="sort('user_name')" style="width: 20%;">
             <span class="sort-wrap">
               Users
               <span class="sort-icons">
@@ -32,7 +32,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('CompanyID')">
+          <th (click)="sort('CompanyID')" style="width: 20%;">
             <span class="sort-wrap">
               Company Id
               <span class="sort-icons">
@@ -41,7 +41,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('CompanyName')">
+          <th (click)="sort('CompanyName')" style="width: 20%;">
             <span class="sort-wrap">
               Company Name
               <span class="sort-icons">
@@ -50,43 +50,28 @@
               </span>
             </span>
           </th>
-          <!-- <th (click)="sort('head_office')">
-            <span class="sort-wrap">
-              Head Office
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th>
-          <th (click)="sort('headoffice_location')">
-            <span class="sort-wrap">
-              Head Office location
-              <span class="sort-icons">
-                <i class="sort-up"></i>
-                <i class="sort-down"></i>
-              </span>
-            </span>
-          </th> -->
           <th style="width: 20%;">Operation</th>
         </tr>
       </thead>
-      <tbody>
-        <tr
-          *ngFor="let item of companyAccess| orderBy: {property: column, direction: direction}|filter:searchText;index as i">
-          <td>{{item.UserID}}</td>
-          <td>{{item.user_name}}</td>
-          <td>{{item.CompanyID}}</td>
-          <td>{{item.CompanyName}}</td>
-          <!-- <td>{{item.headoffice_location}}</td> -->
-          <td class="btn-wrap" style="width: 20%;">
-            <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
-            <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
-          </td>
-        </tr>
-      </tbody>
     </table>
-    <app-no-data *ngIf="!companyAccess||companyAccess.length==0"></app-no-data>
+    <div class="table-scroll-wrap">
+      <table class="table table-striped table-main-body" *ngIf="companyAccess&&companyAccess.length>0">
+        <tbody>
+          <tr
+            *ngFor="let item of companyAccess| orderBy: {property: column, direction: direction}|filter:searchText;index as i">
+            <td style="width: 20%;">{{item.UserID}}</td>
+            <td style="width: 20%;">{{item.user_name}}</td>
+            <td style="width: 20%;">{{item.CompanyID}}</td>
+            <td style="width: 20%;">{{item.CompanyName}}</td>
+            <td class="btn-wrap" style="width: 20%;">
+              <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
+              <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <app-no-data *ngIf="!companyAccess||companyAccess.length==0"></app-no-data>
+    </div>
   </section>
 </section>
 
