--- a/src/app/featured/dashbord/component/company/company.component.html
+++ b/src/app/featured/dashbord/component/company/company.component.html
@@ -11,10 +11,10 @@
 
 
   <section class="table-wrap">
-    <table class="table table-striped" *ngIf="companies&&companies.length>0">
+    <table class="table table-main-head">
       <thead>
         <tr>
-          <th (click)="sort('id')">
+          <th (click)="sort('id')" style="width: 10%;">
             <span class="sort-wrap">
               Id
               <span class="sort-icons">
@@ -23,7 +23,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('CompanyName')">
+          <th (click)="sort('CompanyName')" style="width: 10%;">
             <span class="sort-wrap">
               Name
               <span class="sort-icons">
@@ -31,7 +31,7 @@
                 <i class="sort-down"></i>
               </span>
             </span></th>
-          <th (click)="sort('Address1')">
+          <th (click)="sort('Address1')" style="width: 20%;">
             <span class="sort-wrap">
               Address
               <span class="sort-icons">
@@ -39,7 +39,7 @@
                 <i class="sort-down"></i>
               </span>
             </span></th>
-          <th (click)="sort('MobileNo')">
+          <th (click)="sort('MobileNo')" style="width: 20%;">
             <span class="sort-wrap">
               Mobile
               <span class="sort-icons">
@@ -47,7 +47,7 @@
                 <i class="sort-down"></i>
               </span>
             </span></th>
-          <th (click)="sort('Email')">
+          <th (click)="sort('Email')" style="width: 20%;">
             <span class="sort-wrap">
               Email
               <span class="sort-icons">
@@ -58,21 +58,25 @@
           <th style="width: 20%;">Operation</th>
         </tr>
       </thead>
-      <tbody>
-        <tr *ngFor="let item of companies | orderBy: {property: column, direction: direction}|filter:searchText">
-          <td>{{item.id}}</td>
-          <td>{{item.CompanyName}}</td>
-          <td>{{item.Address1}}</td>
-          <td>{{item.MobileNo}}</td>
-          <td>{{item.Email}}</td>
-          <td class="btn-wrap" style="width: 20%;">
-            <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
-            <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
-          </td>
-        </tr>
-      </tbody>
     </table>
-    <app-no-data *ngIf="!companies||companies.length==0"></app-no-data>
+    <div class="table-scroll-wrap">
+      <table class="table table-striped table-main-body" *ngIf="companies&&companies.length>0">
+        <tbody>
+          <tr *ngFor="let item of companies | orderBy: {property: column, direction: direction}|filter:searchText">
+            <td style="width: 10%;">{{item.id}}</td>
+            <td style="width: 10%;">{{item.CompanyName}}</td>
+            <td style="width: 20%;">{{item.Address1}}</td>
+            <td style="width: 20%;">{{item.MobileNo}}</td>
+            <td style="width: 20%;">{{item.Email}}</td>
+            <td class="btn-wrap" style="width: 20%;">
+              <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
+              <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <app-no-data *ngIf="!companies||companies.length==0"></app-no-data>
+    </div>
   </section>
 </section>
 
