--- a/src/app/featured/dashbord/component/cost-center-access/cost-center-access.component.html
+++ b/src/app/featured/dashbord/component/cost-center-access/cost-center-access.component.html
@@ -11,10 +11,10 @@
 
 
   <section class="table-wrap">
-    <table class="table table-striped" *ngIf="allCostAccess&&allCostAccess.length>0">
+    <table class="table table-main-head">
       <thead>
         <tr>
-          <th (click)="sort('UserId')">
+          <th (click)="sort('userid')" style="width: 20%;">
             <span class="sort-wrap">
               Id
               <span class="sort-icons">
@@ -23,7 +23,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('user_name')">
+          <th (click)="sort('username')" style="width: 20%;">
             <span class="sort-wrap">
               Name
               <span class="sort-icons">
@@ -32,7 +32,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('ChainName')">
+          <th (click)="sort('ChainName')" style="width: 20%;">
             <span class="sort-wrap">
               Chain
               <span class="sort-icons">
@@ -41,7 +41,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('LocationName')">
+          <th (click)="sort('LocationName')" style="width: 20%;">
             <span class="sort-wrap">
               Location
               <span class="sort-icons">
@@ -53,28 +53,32 @@
           <th style="width: 20%;">Operation</th>
         </tr>
       </thead>
-      <tbody>
-        <tr *ngFor="let item of allCostAccess  | orderBy: {property: column, direction: direction}|filter:searchText">
-          <td>{{item.UserId}}</td>
-          <td>{{item.user_name}}</td>
-          <td>{{item.ChainName}}</td>
-          <td>{{item.LocationName}}</td>
-          <td class="btn-wrap" style="width: 20%;">
-            <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
-            <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
-          </td>
-        </tr>
-      </tbody>
     </table>
-    <app-no-data *ngIf="!allCostAccess||allCostAccess.length==0"></app-no-data>
+    <div class="table-scroll-wrap">
+      <table class="table table-striped table-main-body" *ngIf="allCostAccess&&allCostAccess.length>0">
+        <tbody>
+          <tr *ngFor="let item of allCostAccess  | orderBy: {property: column, direction: direction}|filter:searchText">
+            <td style="width: 20%;">{{item.userid}}</td>
+            <td style="width: 20%;">{{item.username}}</td>
+            <td style="width: 20%;">{{item.ChainName}}</td>
+            <td style="width: 20%;">{{item.LocationName}}</td>
+            <td class="btn-wrap" style="width: 20%;">
+              <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
+              <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <app-no-data *ngIf="!allCostAccess||allCostAccess.length==0"></app-no-data>
+    </div>
   </section>
 </section>
 
 
 
 <!-- edit cost-center-access -->
-<app-add-cost-center-access *ngIf="showEdit" [Edit]="true" [fields]="editFormData" (formCancel)="cancelEdit($event)"
-  (formSubmitted)="submitEdit($event)">
+<app-add-cost-center-access *ngIf="showEdit" [users]="allusers" [Edit]="true" [fields]="editFormData"
+  (formCancel)="cancelEdit($event)" (formSubmitted)="submitEdit($event)">
 </app-add-cost-center-access>
 
 
@@ -84,5 +88,5 @@
 </app-delete-popup>
 
 <!-- add popup -->
-<app-add-cost-center-access *ngIf="showAdd" [Edit]="false" [fields]="addFormData" (formCancel)="cancelAdd($event)"
-  (formSubmitted)="submitAdd($event)"></app-add-cost-center-access>
+<app-add-cost-center-access *ngIf="showAdd" [users]="allusers" [Edit]="false" [fields]="addFormData"
+  (formCancel)="cancelAdd($event)" (formSubmitted)="submitAdd($event)"></app-add-cost-center-access>
