--- a/src/app/featured/dashbord/component/location/location.component.html
+++ b/src/app/featured/dashbord/component/location/location.component.html
@@ -10,10 +10,10 @@
   </section>
 
   <section class="table-wrap">
-    <table class="table table-striped" *ngIf="addedlocations&&addedlocations.length>0">
+    <table class="table table-main-head">
       <thead>
         <tr>
-          <th (click)="sort('id')">
+          <th (click)="sort('id')" style="width: 10%;">
             <span class="sort-wrap">
               Id
               <span class="sort-icons">
@@ -22,7 +22,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('ChainId')">
+          <th (click)="sort('ChainId')" style="width: 10%;">
             <span class="sort-wrap">
               Chain Code
               <span class="sort-icons">
@@ -31,7 +31,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('ChainName')">
+          <th (click)="sort('ChainName')" style="width: 20%;">
             <span class="sort-wrap">
               Chain Name
               <span class="sort-icons">
@@ -40,7 +40,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('LocationId')">
+          <th (click)="sort('LocationId')" style="width: 20%;">
             <span class="sort-wrap">
               Location Code
               <span class="sort-icons">
@@ -49,7 +49,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('LocationName')">
+          <th (click)="sort('LocationName')" style="width: 20%;">
             <span class="sort-wrap">
               Location Name
               <span class="sort-icons">
@@ -61,21 +61,25 @@
           <th style="width: 20%;">Operation</th>
         </tr>
       </thead>
-      <tbody>
-        <tr *ngFor="let item of addedlocations | orderBy: {property: column, direction: direction}|filter:searchText">
-          <td>{{item.id}}</td>
-          <td>{{item.ChainId}}</td>
-          <td>{{item.ChainName}}</td>
-          <td>{{item.LocationId}}</td>
-          <td>{{item.LocationName}}</td>
-          <td class="btn-wrap" style="width: 20%;">
-            <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
-            <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
-          </td>
-        </tr>
-      </tbody>
     </table>
-    <app-no-data *ngIf="!addedlocations||addedlocations.length==0"></app-no-data>
+    <div class="table-scroll-wrap">
+      <table class="table table-striped table-main-body" *ngIf="addedlocations&&addedlocations.length>0">
+        <tbody>
+          <tr *ngFor="let item of addedlocations | orderBy: {property: column, direction: direction}|filter:searchText">
+            <td style="width: 10%;">{{item.id}}</td>
+            <td style="width: 10%;">{{item.ChainId}}</td>
+            <td style="width: 20%;">{{item.ChainName}}</td>
+            <td style="width: 20%;">{{item.LocationId}}</td>
+            <td style="width: 20%;">{{item.LocationName}}</td>
+            <td class="btn-wrap" style="width: 20%;">
+              <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
+              <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <app-no-data *ngIf="!addedlocations||addedlocations.length==0"></app-no-data>
+    </div>
   </section>
 </section>
 
