--- a/src/app/featured/dashbord/component/user/user.component.html
+++ b/src/app/featured/dashbord/component/user/user.component.html
@@ -10,10 +10,10 @@
   </section>
 
   <section class="table-wrap">
-    <table class="table table-striped" *ngIf="allUsers&&allUsers.length>0">
+    <table class="table table-main-head">
       <thead>
         <tr>
-          <th (click)="sort('user_id')">
+          <th (click)="sort('user_id')" style="width: 10%;">
             <span class="sort-wrap">
               Id
               <span class="sort-icons">
@@ -22,7 +22,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('user_name')">
+          <th (click)="sort('user_name')" style="width: 10%;">
             <span class="sort-wrap">
               Name
               <span class="sort-icons">
@@ -31,7 +31,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('user_phone')">
+          <th (click)="sort('user_phone')" style="width: 20%;">
             <span class="sort-wrap">
               Mobile
               <span class="sort-icons">
@@ -40,7 +40,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('user_email')">
+          <th (click)="sort('user_email')" style="width: 20%;">
             <span class="sort-wrap">
               Email
               <span class="sort-icons">
@@ -49,7 +49,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('UDID')">
+          <th (click)="sort('UDID')" style="width: 10%;">
             <span class="sort-wrap">
               UUID
               <span class="sort-icons">
@@ -58,7 +58,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('LoginPin')">
+          <th (click)="sort('LoginPin')" style="width: 10%;">
             <span class="sort-wrap">
               Login Pin
               <span class="sort-icons">
@@ -70,22 +70,26 @@
           <th style="width: 20%;">Operation</th>
         </tr>
       </thead>
-      <tbody>
-        <tr *ngFor="let item of allUsers | orderBy: {property: column, direction: direction}|filter:searchText">
-          <td>{{item.user_id}}</td>
-          <td>{{item.user_name}}</td>
-          <td>{{item.user_phone}}</td>
-          <td>{{item.user_email}}</td>
-          <td>{{item.UDID}}</td>
-          <td>{{item.LoginPin}}</td>
-          <td class="btn-wrap" style="width: 20%;">
-            <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
-            <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
-          </td>
-        </tr>
-      </tbody>
     </table>
-    <app-no-data *ngIf="!allUsers||allUsers.length==0"></app-no-data>
+    <div class="table-scroll-wrap">
+      <table class="table table-striped table-main-body" *ngIf="allUsers&&allUsers.length>0">
+        <tbody>
+          <tr *ngFor="let item of allUsers | orderBy: {property: column, direction: direction}|filter:searchText">
+            <td style="width: 10%;">{{item.user_id}}</td>
+            <td style="width: 10%;">{{item.user_name}}</td>
+            <td style="width: 20%;">{{item.user_phone}}</td>
+            <td style="width: 20%;">{{item.user_email}}</td>
+            <td style="width: 10%;">{{item.UDID}}</td>
+            <td style="width: 10%;">{{item.LoginPin}}</td>
+            <td class="btn-wrap" style="width: 20%;">
+              <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
+              <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <app-no-data *ngIf="!allUsers||allUsers.length==0"></app-no-data>
+    </div>
   </section>
 </section>
 
