--- a/src/app/featured/dashbord/component/users-admin/users-admin.component.html
+++ b/src/app/featured/dashbord/component/users-admin/users-admin.component.html
@@ -11,10 +11,10 @@
   </section>
 
   <section class="table-wrap">
-    <table datatable class="table table-striped" *ngIf="allUsers&&allUsers.length>0">
+    <table class="table table-main-head">
       <thead>
         <tr>
-          <th (click)="sort('id')">
+          <th (click)="sort('id')" style="width: 10%;">
             <span class="sort-wrap">
               Id
               <span class="sort-icons">
@@ -23,7 +23,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('user_name')">
+          <th (click)="sort('user_name')" style="width: 20%;">
             <span class="sort-wrap">
               Name
               <span class="sort-icons">
@@ -32,7 +32,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('user_name')">
+          <th (click)="sort('status')" style="width: 10%;">
             <span class="sort-wrap">
               Status
               <span class="sort-icons">
@@ -41,7 +41,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('companyid')">
+          <th (click)="sort('companyid')" style="width: 10%;">
             <span class="sort-wrap">
               Company
               <span class="sort-icons">
@@ -50,7 +50,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('email')">
+          <th (click)="sort('email')" style="width: 20%;">
             <span class="sort-wrap">
               Email
               <span class="sort-icons">
@@ -59,7 +59,7 @@
               </span>
             </span>
           </th>
-          <th (click)="sort('password')">
+          <th (click)="sort('password')" style="width: 10%;">
             <span class="sort-wrap">
               Password
               <span class="sort-icons">
@@ -68,25 +68,29 @@
               </span>
             </span>
           </th>
-          <th>Operation</th>
+          <th style="width: 20%;">Operation</th>
         </tr>
       </thead>
-      <tbody *ngIf="allUsers&&allUsers.length>0">
-        <tr *ngFor="let item of allUsers| orderBy: {property: column, direction: direction}|filter:searchText">
-          <td>{{item.id}}</td>
-          <td>{{item.user_name}}</td>
-          <td>{{item.companyid}}</td>
-          <td>Active</td>
-          <td>{{item.email}}</td>
-          <td> {{item.password_ref}} </td>
-          <td class="btn-wrap" style="width: 20%;">
-            <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
-            <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
-          </td>
-        </tr>
-      </tbody>
     </table>
-    <app-no-data *ngIf="!allUsers||allUsers.length==0"></app-no-data>
+    <div class="table-scroll-wrap">
+      <table class="table table-striped table-main-body" *ngIf="allUsers&&allUsers.length>0">
+        <tbody>
+          <tr *ngFor="let item of allUsers| orderBy: {property: column, direction: direction}|filter:searchText">
+            <td style="width: 10%;">{{item.id}}</td>
+            <td style="width: 20%;">{{item.user_name}}</td>
+            <td style="width: 10%;">{{item.status==0?'Suspended':'Active'}}</td>
+            <td style="width: 10%;">{{item.companyid}}</td>
+            <td style="width: 20%;">{{item.email}}</td>
+            <td style="width: 10%;"> {{item.password_ref}} </td>
+            <td class="btn-wrap" style="width: 20%;">
+              <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
+              <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <app-no-data *ngIf="!allUsers||allUsers.length==0"></app-no-data>
+    </div>
   </section>
 </section>
 
