--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -29,6 +29,7 @@ time, mark, audio, video {
     font-size:100%;
     vertical-align:baseline;
     background:transparent;
+    color: #444;
 }
 
 body {
@@ -106,6 +107,7 @@ input, select {
 
 body{
     font-family: 'Roboto' ;
+    color: #444;
 }
 .flex-wrap {
     display: flex;
@@ -455,6 +457,11 @@ label.radio {
     background: #ddd;
     display: flex;
 }
+mat-sidenav-container.mat-drawer-container{
+    height: 100vh;
+}
+
+
 .sidebar{
     width: 20%;
     height: 100vh;
@@ -490,6 +497,11 @@ label.radio {
     font-size: 14px;
     cursor: pointer;
     display: block;
+    position: relative;
+}
+.sidebar ul li a:after{
+    position: absolute;
+    right: 14px;
 }
 .sidebar ul li a:hover{
     background: #dbdbdb;
@@ -579,6 +591,7 @@ li.menu-active a {
 }
 .content-area{
     width: 100%;
+    height: 100vh;
     background: #F1F1F1;
 }
 .content-wrap{
@@ -632,7 +645,7 @@ table.table.table-main-head {
 .table td{
     font-size: 14px;
     font-weight: 500;
-    color: #7aaa30;
+    color: #444;
     vertical-align: middle;
     border: 0;
     padding: 10px;
