--- a/src/app/featured/dashbord/component/chain/chain.component.html
+++ b/src/app/featured/dashbord/component/chain/chain.component.html
@@ -45,12 +45,12 @@
       <table class="table table-striped table-main-body" *ngIf="addedChains&&addedChains.length>0">
         <tbody>
           <tr *ngFor="let item of addedChains | orderBy: {property: column, direction: direction}|filter:searchText">
-            <td style="width: 20%;">{{item.id}}</td>
+            <td style="width: 20%;" (click)="openView(item)">{{item.id}}</td>
             <td style="width: 20%;">{{item.ChainId}}</td>
             <td style="width: 30%;">{{item.ChainName}}</td>
-            <td style=" width: 30%;" class="btn-wrap">
-              <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
-              <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
+            <td class="btn-wrap">
+              <button mat-flat-button="" color="primary" class="btn btn-greenx" (click)="openEdit(item)">Edit</button>
+              <button mat-flat-button="" class="btn btn-default" (click)="openDelete(item)">Remove</button>
             </td>
           </tr>
         </tbody>
@@ -78,3 +78,6 @@
 <app-add-chain-popup *ngIf="showEdit" [fields]="editFormData" (formCancel)="cancelEdit($event)"
   (formSubmitted)="submitEdit($event)">
 </app-add-chain-popup>
+
+<app-chain-details *ngIf="showDetails" [fields]="detailsData" (formCancel)="cancelView($event)"
+  (formSubmitted)="cancelView($event)"></app-chain-details>
