button color changes

--- a/src/app/featured/authentication/component/login/login.component.html
+++ b/src/app/featured/authentication/component/login/login.component.html
@@ -16,7 +16,7 @@
         <input type="password" matInput class="form-control" formControlName="password" placeholder="Password"
           [ngClass]="{ 'has-error': isSubmitted && formControls.password.errors }">
       </div>
-      <button class="btn btn-green">Login</button>
+      <button mat-flat-button color="primary" class="btn btn-green">Login</button>
     </form>
   </div>
 </div>
