--- a/src/app/featured/dashbord/component/details-popups/chain-details/chain-details.component.html
+++ b/src/app/featured/dashbord/component/details-popups/chain-details/chain-details.component.html
@@ -104,7 +104,8 @@
         </div>
         <!-- Modal footer -->
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal" (click)="popupClose()">Close</button>
+          <button type="button" mat-flat-button class="btn btn-default" data-dismiss="modal"
+            (click)="popupClose()">Close</button>
         </div>
       </div>
     </div>
