--- a/src/app/featured/dashbord/component/details-popups/currency-details/currency-details.component.html
+++ b/src/app/featured/dashbord/component/details-popups/currency-details/currency-details.component.html
@@ -117,7 +117,7 @@
         </div>
         <!-- Modal footer -->
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" (click)="popupClose()">Close</button>
+          <button type="button" mat-flat-button class="btn btn-default" (click)="popupClose()">Close</button>
         </div>
       </div>
     </div>
