--- a/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
@@ -108,9 +108,10 @@
                 </div>
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal"
+                    <button type="button" mat-flat-button class="btn btn-default" data-dismiss="modal"
                         (click)="popupClose()">Close</button>
-                    <button type="button" class="btn btn-green" data-dismiss="modal" (click)="onSubmit()">Save</button>
+                    <button type="button" mat-flat-button color="primary" class="btn" data-dismiss="modal"
+                        (click)="onSubmit()">Save</button>
                 </div>
             </div>
         </div>
