--- a/src/app/featured/dashbord/component/popups/add-cost-center-access/add-cost-center-access.component.html
+++ b/src/app/featured/dashbord/component/popups/add-cost-center-access/add-cost-center-access.component.html
@@ -106,8 +106,8 @@
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" (click)="popupClose()">Close</button>
-                    <button type="button" class="btn btn-green" (click)="onSubmit()">Save</button>
+                    <button type="button" mat-flat-button class="btn btn-default" (click)="popupClose()">Close</button>
+                    <button type="button" mat-flat-button color="primary" class="btn" (click)="onSubmit()">Save</button>
                 </div>
             </div>
         </div>
