--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -29,7 +29,7 @@ time, mark, audio, video {
     font-size:100%;
     vertical-align:baseline;
     background:transparent;
-    color: #444;
+    /* color: #444; */
 }
 
 body {
@@ -115,6 +115,9 @@ body{
 .form-flex-wrap{
     display: flex;
     align-items: center;
+}
+.curser-point{
+    cursor: pointer !important;
 }
 .flex-top{
     display: flex;
@@ -510,6 +513,7 @@ mat-sidenav-container.mat-drawer-container{
 .sidebar ul li a:after{
     position: absolute;
     right: 14px;
+    top: 20px;
 }
 .sidebar ul li a:hover{
     background: #dbdbdb;
