--- a/src/app/featured/dashbord/component/chain/chain.component.html
+++ b/src/app/featured/dashbord/component/chain/chain.component.html
@@ -1,6 +1,7 @@
 <section class="content-wrap">
   <section class="table-heading">
-    <button class=" float-right btn btn-green" (click)="openAdd()">Add New Chain</button>
+    <button mat-flat-button color="primary" class="float-right btn" (click)="openAdd()">Add New
+      Chain</button>
     <div class="flex-wrap">
       <h1>Chain</h1>
       <div class="form-group search-box search">
@@ -45,12 +46,12 @@
       <table class="table table-striped table-main-body" *ngIf="addedChains&&addedChains.length>0">
         <tbody>
           <tr *ngFor="let item of addedChains | orderBy: {property: column, direction: direction}|filter:searchText">
-            <td style="width: 20%;" (click)="openView(item)">{{item.id}}</td>
+            <td class="curser-point" style="width: 20%;" (click)="openView(item)">{{item.id}}</td>
             <td style="width: 20%;">{{item.ChainId}}</td>
             <td style="width: 30%;">{{item.ChainName}}</td>
             <td class="btn-wrap">
-              <button mat-flat-button="" color="primary" class="btn btn-greenx" (click)="openEdit(item)">Edit</button>
-              <button mat-flat-button="" class="btn btn-default" (click)="openDelete(item)">Remove</button>
+              <button mat-flat-button color="primary" class="btn" (click)="openEdit(item)">Edit</button>
+              <button mat-flat-button class="btn btn-default" (click)="openDelete(item)">Remove</button>
             </td>
           </tr>
         </tbody>
