--- a/src/app/featured/dashbord/component/company-access/company-access.component.html
+++ b/src/app/featured/dashbord/component/company-access/company-access.component.html
@@ -1,8 +1,7 @@
 <section class="content-wrap">
-  <!-- <button class=" float-right btn btn-green" (click)="openAdd()">Add New</button> -->
 
   <section class="table-heading">
-    <!-- <button class=" float-right btn btn-green" (click)="openAdd()">Add New</button> -->
+    <!-- <button   mat-flat-button color="primary" class="float-right btn" (click)="openAdd()">Add New</button> -->
     <div class="flex-wrap">
       <h1>Company Access</h1>
       <div class="form-group search-box search">
@@ -63,9 +62,9 @@
             <td style="width: 20%;">{{item.user_name}}</td>
             <td style="width: 20%;">{{item.CompanyID}}</td>
             <td style="width: 20%;">{{item.CompanyName}}</td>
-            <td class="btn-wrap" style="width: 20%;">
-              <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
-              <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
+            <td class="btn-wrap">
+              <button mat-flat-button color="primary" class="btn" (click)="openEdit(item)">Edit</button>
+              <button mat-flat-button class="btn btn-default" (click)="openDelete(item)">Remove</button>
             </td>
           </tr>
         </tbody>
