--- a/src/app/featured/dashbord/component/company/company.component.html
+++ b/src/app/featured/dashbord/component/company/company.component.html
@@ -1,6 +1,6 @@
 <section class="content-wrap">
   <section class="table-heading">
-    <button class=" float-right btn btn-green" (click)="openAdd()">Add Company</button>
+    <button mat-flat-button color="primary" class="float-right btn" (click)="openAdd()">Add Company</button>
     <div class="flex-wrap">
       <h1>Company</h1>
       <div class="form-group search-box search">
@@ -68,9 +68,10 @@
             <td style="width: 20%;">{{item.Address1}}</td>
             <td style="width: 20%;">{{item.MobileNo}}</td>
             <td style="width: 20%;">{{item.Email}}</td>
-            <td class="btn-wrap" style="width: 20%;">
-              <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
-              <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
+            <td class="btn-wrap">
+              <button mat-flat-button color="primary" class="btn" (click)="openEdit(item)">Edit</button>
+              <button mat-flat-button class="btn btn-default" class="btn btn-default"
+                (click)="openDelete(item)">Remove</button>
             </td>
           </tr>
         </tbody>
