--- a/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.html
@@ -264,8 +264,8 @@
                 </div>
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" (click)="popupClose()">Cancel</button>
-                    <button type="button" class="btn btn-green" (click)="onSubmit()">Save</button>
+                    <button type="button" mat-flat-button class="btn btn-default" (click)="popupClose()">Cancel</button>
+                    <button type="button" mat-flat-button color="primary" class="btn" (click)="onSubmit()">Save</button>
                 </div>
                 <!-- </div> -->
             </div>
