--- a/src/app/featured/dashbord/component/users-admin/users-admin.component.html
+++ b/src/app/featured/dashbord/component/users-admin/users-admin.component.html
@@ -1,7 +1,7 @@
 <!--component html goes here -->
 <section class="content-wrap">
   <section class="table-heading">
-    <button class=" float-right btn btn-green" (click)="openAdd()">Add New</button>
+    <button class="float-right btn" mat-flat-button color="primary" (click)="openAdd()">Add New</button>
     <div class="flex-wrap">
       <h1>User</h1>
       <div class="form-group search-box search">
@@ -83,9 +83,9 @@
             <td style="width: 20%;">{{item.email}}</td>
             <td style="width: 10%;"> {{item.password_ref}} </td>
             <td style="width: 10%;">{{item.status==0?'Suspended':'Active'}}</td>
-            <td class="btn-wrap" style="width: 20%;">
-              <button class="btn btn-green" (click)="openEdit(item)">Edit</button>
-              <button class="btn btn-default" (click)="openDelete(item)">Remove</button>
+            <td class="btn-wrap">
+              <button mat-flat-button color="primary" class="btn" (click)="openEdit(item)">Edit</button>
+              <button mat-flat-button class="btn btn-default" (click)="openDelete(item)">Remove</button>
             </td>
           </tr>
         </tbody>
